stoped scrolling when opoup is open, changed z-index=9999 for popup, deleted nerver used elements

--- a/src/components/styles/Card.module.scss
+++ b/src/components/styles/Card.module.scss
@@ -1,6 +1,7 @@
 @import "./../../styles/variabiles.scss";
 
 .cart {
+  cursor: pointer;
   display: block;
   width: 100%;
   max-width: 350px;
