--- a/src/components/styles/Popup.module.scss
+++ b/src/components/styles/Popup.module.scss
@@ -2,7 +2,7 @@
 
 .popup {
     position: fixed;
-    z-index: 99;
+    z-index: 9999;
     height: 700px;
     width: 80%;
     max-width: calc(1200px - 30px);
